--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8080
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/Intex
+server.port=5887
+spring.datasource.url=jdbc:postgresql://containers-us-west-35.railway.app:5887/railway
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Intex
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=26
+spring.datasource.password=RDgZoKIfNdtWGcI96GoU
 
 #Redis configuration
 spring.redis.host=localhost
