--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,10 @@ spring.datasource.username=postgres
 spring.datasource.password=RDgZoKIfNdtWGcI96GoU
 
 #Redis configuration
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=containers-us-west-103.railway.app
+spring.redis.port=5647
+spring.redis.username=default
+spring.redis.password=D7gRDm4YoQaNS5lob9R4
 
 
 spring.servlet.multipart.max-file-size=5MB
