--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=RDgZoKIfNdtWGcI96GoU
 #Redis configuration
 spring.redis.host=containers-us-west-103.railway.app
 spring.redis.port=5647
-spring.redis.username=default
+#spring.redis.username=default
 spring.redis.password=D7gRDm4YoQaNS5lob9R4
 
 
